--- a/pytorch/mnist/engine.yaml
+++ b/pytorch/mnist/engine.yaml
@@ -2,10 +2,10 @@
 apiVersion: "1.1.0"
 
 # Which version of Python to use. Versions 2.7 and 3.5 are supported
-pythonVersion: "3.5"
+pythonVersion: "2.7"
 
-# Which version of Tensorflow to use. Versions 1.3.0 to 1.8.0 are supported
-tensorFlowVersion: "1.8.0"
+# Which version of Pytorch to use. Version 0.4.0 is supported
+pytorchVersion: "0.4.0"
 
 # How many GPUs to run on (It is most efficient to use a multiple of 8)
 numGPUs: 2
@@ -27,10 +27,10 @@ dataBucketSubdirectory: /VOC2012/VOC2012
 # Either set jobId OR bucket and bucketPath, but not both.
 # From your code, you can get the directory where the data is mounted with `eml.data.input_dir()`
 #inputDir:
-  #jobId: train0000013cc556fe0d09c2168fdd41536945825
+  #jobId: train00000153b34d88e8a1d814acf051537229026
   #bucket: test.us-west-2.customer-data.engineml.com
   #bucketPath: /checkpoints/train000000195f846f0d7f389518e9f1533941940
 
 # The command to run
 commands:
-      - python tensorflow/mnist/tensorflow_mnist.py
+      - python pytorch/mnist/pytorch_mnist.py
