--- a/tensorflow/mnist/engine.yaml
+++ b/tensorflow/mnist/engine.yaml
@@ -2,13 +2,13 @@
 apiVersion: "1.1.0"
 
 # Which version of Python to use. Versions 2.7 and 3.5 are supported
-pythonVersion: "3.5"
+pythonVersion: "3.6"
 
 # Which version of Tensorflow to use. Versions 1.3.0 to 1.8.0 are supported
 tensorFlowVersion: "1.8.0"
 
 # How many GPUs to run on (It is most efficient to use a multiple of 8)
-numGPUs: 2
+numGPUs: 1
 
 # The engine build script. This script installs all dependencies required for your project
 build: engine_build.sh
@@ -22,6 +22,9 @@ dataBucket: datasets.engineml.com
 
 # Subdirectory of the S3 bucket containing tfrecords
 dataBucketSubdirectory: /mnist
+
+inputDir:
+  jobId: welded-column
 
 # The command to run
 commands:
