--- a/tensorflow/mnist/engine.yaml
+++ b/tensorflow/mnist/engine.yaml
@@ -10,6 +10,7 @@ tensorFlowVersion: "1.8.0"
 # How many GPUs to run on (It is most efficient to use a multiple of 8)
 numGPUs: 8
 
+gpuType: "k80"
 preemptible: true
 
 # The engine build script. This script installs all dependencies required for your project
